--- a/package.json
+++ b/package.json
@@ -21,14 +21,16 @@
     "@ionic-native/status-bar": "3.4.2",
     "@ionic/storage": "2.0.1",
     "angularfire2": "^4.0.0-rc.0",
+    "cordova-android": "~6.3.0",
     "cordova-ios": "^4.4.0",
     "cordova-plugin-console": "^1.1.0",
-    "cordova-plugin-device": "^1.1.6",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.3",
-    "cordova-plugin-whitelist": "^1.3.2",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-statusbar": "^2.3.0",
+    "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^3.9.0",
     "ionic-angular": "3.1.1",
+    "ionic-image-loader": "^4.2.1",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.1.1",
@@ -61,7 +63,8 @@
       "cordova-plugin-splashscreen": {}
     },
     "platforms": [
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
