--- a/package.json
+++ b/package.json
@@ -16,31 +16,43 @@
     "@angular/http": "4.0.2",
     "@angular/platform-browser": "4.0.2",
     "@angular/platform-browser-dynamic": "4.0.2",
-    "@ionic-native/core": "3.4.2",
+    "@ionic-native/barcode-scanner": "^4.0.0",
+    "@ionic-native/core": "^4.5.2",
+    "@ionic-native/file": "^4.0.0",
+    "@ionic-native/file-transfer": "^4.0.0",
+    "@ionic-native/google-maps": "^4.5.2",
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
     "@ionic/storage": "2.0.1",
-    "angularfire2": "^4.0.0-rc.0",
-    "cordova-android": "~6.3.0",
-    "cordova-ios": "^4.4.0",
+    "@techiediaries/ngx-qrcode": "0.0.5",
+    "angularfire2": "^5.0.0-rc.3",
+    "cordova-android": "6.3.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-file": "^5.0.0",
+    "cordova-plugin-file-transfer": "^1.7.0",
+    "cordova-plugin-googlemaps": "^2.1.1",
+    "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "^2.3.0",
     "cordova-plugin-whitelist": "^1.3.3",
-    "firebase": "^3.9.0",
+    "ethereumjs-tx": "^1.3.3",
+    "firebase": "^4.5.0",
+    "install": "^0.10.2",
     "ionic-angular": "3.1.1",
     "ionic-image-loader": "^4.2.1",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "ngx-qrcode2": "0.0.5",
+    "npm": "^5.6.0",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.4.0",
-    "zone.js": "^0.8.5"
+    "web3": "github:ethereum/web3.js",
+    "zone.js": "^0.8.5",
+    "cordova-ios": "~4.4.0"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.4",
-    "@ionic/cli-plugin-cordova": "1.0.0",
-    "@ionic/cli-plugin-ionic-angular": "1.0.0",
     "typescript": "~2.2.1"
   },
   "cordovaPlugins": [
@@ -60,11 +72,17 @@
       "cordova-plugin-console": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {}
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyBc1cMbfX0ogh8jNAw7J69IYaLHizOafcY",
+        "API_KEY_FOR_IOS": "AIzaSyAx8YYHB5Hcqa1SUrsLSHWbk6nyga2iSro"
+      }
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
