--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@ionic-native/google-maps": "^4.5.2",
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
+    "@ionic/app-scripts": "3.1.6",
     "@ionic/storage": "2.0.1",
     "@techiediaries/ngx-qrcode": "0.0.5",
     "angularfire2": "^5.0.0-rc.3",
     "cordova-android": "6.3.0",
+    "cordova-ios": "~4.4.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-file": "^5.0.0",
@@ -48,8 +50,8 @@
     "rxjs": "5.1.1",
     "sw-toolbox": "3.4.0",
     "web3": "github:ethereum/web3.js",
-    "zone.js": "^0.8.5",
-    "cordova-ios": "~4.4.0"
+    "web3-eth-accounts": "^1.0.0-beta.26",
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.4",
