--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@angular/http": "4.0.2",
     "@angular/platform-browser": "4.0.2",
     "@angular/platform-browser-dynamic": "4.0.2",
-    "@ionic-native/barcode-scanner": "^4.0.0",
+    "@firebase/webchannel-wrapper": "0.2.5",
+    "@ionic-native/barcode-scanner": "^4.5.2",
     "@ionic-native/core": "^4.5.2",
     "@ionic-native/file": "^4.0.0",
     "@ionic-native/file-transfer": "^4.0.0",
@@ -47,14 +48,16 @@
     "ionicons": "3.0.0",
     "ngx-qrcode2": "0.0.5",
     "npm": "^5.6.0",
+    "phonegap-plugin-barcodescanner": "^7.0.0",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.4.0",
     "web3": "github:ethereum/web3.js",
-    "web3-eth-accounts": "^1.0.0-beta.26",
+    "web3-eth-accounts": "^1.0.0-beta.27",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.4",
+    "@types/node": "^8.5.2",
     "typescript": "~2.2.1"
   },
   "cordovaPlugins": [
@@ -80,6 +83,9 @@
       "cordova-plugin-googlemaps": {
         "API_KEY_FOR_ANDROID": "AIzaSyBc1cMbfX0ogh8jNAw7J69IYaLHizOafcY",
         "API_KEY_FOR_IOS": "AIzaSyAx8YYHB5Hcqa1SUrsLSHWbk6nyga2iSro"
+      },
+      "phonegap-plugin-barcodescanner": {
+        "CAMERA_USAGE_DESCRIPTION": " "
       }
     },
     "platforms": [
