--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ionic-native/core": "^4.5.2",
     "@ionic-native/file": "^4.0.0",
     "@ionic-native/file-transfer": "^4.0.0",
+    "@ionic-native/geolocation": "^4.5.2",
     "@ionic-native/google-maps": "^4.5.2",
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
