--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ngx-qrcode2": "0.0.5",
     "npm": "^5.6.0",
     "phonegap-plugin-barcodescanner": "^7.0.0",
+    "promise-polyfill": "7.0.0",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.4.0",
     "web3": "github:ethereum/web3.js",
