--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic/app-scripts": "3.1.6",
     "@ionic/storage": "2.0.1",
     "@techiediaries/ngx-qrcode": "0.0.5",
+    "angular-barcode": "^2.0.1",
     "angularfire2": "^5.0.0-rc.3",
     "cordova-android": "6.3.0",
     "cordova-ios": "~4.4.0",
@@ -47,6 +48,7 @@
     "ionic-image-loader": "^4.2.1",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "jsbarcode": "git+https://github.com/lindell/JsBarcode.git",
     "ngx-qrcode2": "0.0.5",
     "npm": "^5.6.0",
     "phonegap-plugin-barcodescanner": "^7.0.0",
