--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/google-maps": "^4.5.2",
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
+    "@ionic-native/unique-device-id": "^4.5.2",
     "@ionic/app-scripts": "3.1.6",
     "@ionic/storage": "2.0.1",
     "@techiediaries/ngx-qrcode": "0.0.5",
@@ -40,6 +41,7 @@
     "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "^2.3.0",
+    "cordova-plugin-uniquedeviceid": "^1.3.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ethereumjs-tx": "^1.3.3",
     "firebase": "^4.5.0",
@@ -54,6 +56,7 @@
     "phonegap-plugin-barcodescanner": "^7.0.0",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.4.0",
+    "ts-md5": "^1.2.2",
     "web3": "github:ethereum/web3.js",
     "web3-eth-accounts": "^1.0.0-beta.27",
     "zone.js": "^0.8.5"
@@ -89,7 +92,8 @@
       },
       "phonegap-plugin-barcodescanner": {
         "CAMERA_USAGE_DESCRIPTION": " "
-      }
+      },
+      "cordova-plugin-uniquedeviceid": {}
     },
     "platforms": [
       "android",
