--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/file-transfer": "^4.0.0",
     "@ionic-native/geolocation": "^4.5.2",
     "@ionic-native/google-maps": "^4.5.2",
+    "@ionic-native/screen-orientation": "^4.5.2",
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
     "@ionic-native/unique-device-id": "^4.5.2",
@@ -39,10 +40,12 @@
     "cordova-plugin-file-transfer": "^1.7.0",
     "cordova-plugin-googlemaps": "^2.1.1",
     "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
+    "cordova-plugin-screen-orientation": "^3.0.1",
     "cordova-plugin-splashscreen": "^4.1.0",
-    "cordova-plugin-uniquedeviceid": "^1.3.2",
     "cordova-plugin-statusbar": "^2.4.1",
+    "cordova-plugin-uniquedeviceid": "^1.3.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "es6-promise-plugin": "^4.2.2",
     "ethereumjs-tx": "^1.3.3",
     "firebase": "^4.5.0",
     "install": "^0.10.2",
@@ -94,7 +97,8 @@
       "phonegap-plugin-barcodescanner": {
         "CAMERA_USAGE_DESCRIPTION": " "
       },
-      "cordova-plugin-uniquedeviceid": {}
+      "cordova-plugin-uniquedeviceid": {},
+      "cordova-plugin-screen-orientation": {}
     },
     "platforms": [
       "android",
