--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "4.0.2",
+    "@angular/common": "^5.1.3",
     "@angular/compiler": "4.0.2",
     "@angular/compiler-cli": "4.0.2",
     "@angular/core": "4.0.2",
@@ -21,23 +21,30 @@
     "@ionic-native/core": "^4.5.2",
     "@ionic-native/file": "^4.0.0",
     "@ionic-native/file-transfer": "^4.0.0",
+    "@ionic-native/firebase-analytics": "^4.5.2",
     "@ionic-native/geolocation": "^4.5.2",
     "@ionic-native/google-maps": "^4.5.2",
+    "@ionic-native/push": "^4.5.2",
     "@ionic-native/screen-orientation": "^4.5.2",
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
     "@ionic-native/unique-device-id": "^4.5.2",
     "@ionic/app-scripts": "3.1.6",
     "@ionic/storage": "2.0.1",
+    "@ngx-translate/core": "^7.2.2",
+    "@ngx-translate/http-loader": "^2.0.1",
     "@techiediaries/ngx-qrcode": "0.0.5",
     "angular-barcode": "^2.0.1",
     "angularfire2": "^5.0.0-rc.3",
+    "bignumber.js": "^5.0.0",
     "cordova-android": "6.3.0",
     "cordova-ios": "~4.4.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-file": "^5.0.0",
     "cordova-plugin-file-transfer": "^1.7.0",
+    "cordova-plugin-firebase": "^0.1.25",
+    "cordova-plugin-firebase-analytics": "^0.12.1",
     "cordova-plugin-googlemaps": "^2.1.1",
     "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
     "cordova-plugin-screen-orientation": "^3.0.1",
@@ -45,8 +52,10 @@
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-uniquedeviceid": "^1.3.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-support-google-services": "^1.0.0",
     "es6-promise-plugin": "^4.2.2",
     "ethereumjs-tx": "^1.3.3",
+    "ethereumjs-wallet": "^0.6.0",
     "firebase": "^4.5.0",
     "install": "^0.10.2",
     "ionic-angular": "3.1.1",
@@ -57,6 +66,7 @@
     "ngx-qrcode2": "0.0.5",
     "npm": "^5.6.0",
     "phonegap-plugin-barcodescanner": "^7.0.0",
+    "phonegap-plugin-push": "^2.1.1",
     "promise-polyfill": "7.0.0",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.4.0",
@@ -98,11 +108,22 @@
         "CAMERA_USAGE_DESCRIPTION": " "
       },
       "cordova-plugin-uniquedeviceid": {},
-      "cordova-plugin-screen-orientation": {}
+      "cordova-plugin-screen-orientation": {},
+      "cordova-plugin-firebase": {}
     },
     "platforms": [
       "android",
       "ios"
     ]
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gauthierpetetin/FidEverV1.0.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/gauthierpetetin/FidEverV1.0/issues"
   }
 }
