--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "^5.1.3",
+    "@angular/common": "4.0.2",
     "@angular/compiler": "4.0.2",
     "@angular/compiler-cli": "4.0.2",
     "@angular/core": "4.0.2",
@@ -26,30 +26,29 @@
     "@ionic-native/google-maps": "^4.5.2",
     "@ionic-native/push": "^4.5.2",
     "@ionic-native/screen-orientation": "^4.5.2",
-    "@ionic-native/splash-screen": "3.4.2",
-    "@ionic-native/status-bar": "3.4.2",
+    "@ionic-native/splash-screen": "4.5.2",
+    "@ionic-native/status-bar": "4.5.2",
     "@ionic-native/unique-device-id": "^4.5.2",
-    "@ionic/app-scripts": "3.1.6",
-    "@ionic/storage": "2.0.1",
-    "@ngx-translate/core": "^7.2.2",
-    "@ngx-translate/http-loader": "^2.0.1",
+    "@ionic/storage": "2.0.0",
+    "@ngx-translate/core": "^6.0.1",
+    "@ngx-translate/http-loader": "0.0.3",
     "@techiediaries/ngx-qrcode": "0.0.5",
     "angular-barcode": "^2.0.1",
     "angularfire2": "^5.0.0-rc.3",
     "bignumber.js": "^5.0.0",
     "bip39": "^2.5.0",
-    "cordova-android": "6.3.0",
-    "cordova-ios": "~4.4.0",
+    "cordova-android": "7.0.0",
+    "cordova-ios": "~4.5.4",
     "cordova-plugin-console": "^1.1.0",
-    "cordova-plugin-device": "^1.1.7",
-    "cordova-plugin-file": "^5.0.0",
+    "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.0",
     "cordova-plugin-firebase": "^0.1.25",
     "cordova-plugin-firebase-analytics": "^0.12.1",
     "cordova-plugin-googlemaps": "^2.1.1",
     "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
     "cordova-plugin-screen-orientation": "^3.0.1",
-    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-splashscreen": "^5.0.1",
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-uniquedeviceid": "^1.3.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -59,7 +58,7 @@
     "ethereumjs-wallet": "^0.6.0",
     "firebase": "^4.5.0",
     "install": "^0.10.2",
-    "ionic-angular": "3.1.1",
+    "ionic-angular": "3.9.2",
     "ionic-image-loader": "^4.2.1",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -69,17 +68,17 @@
     "phonegap-plugin-barcodescanner": "^7.0.0",
     "phonegap-plugin-push": "^2.1.1",
     "promise-polyfill": "7.0.0",
-    "rxjs": "5.1.1",
-    "sw-toolbox": "3.4.0",
+    "rxjs": "5.5.6",
+    "sw-toolbox": "3.6.0",
     "ts-md5": "^1.2.2",
     "web3": "github:ethereum/web3.js",
     "web3-eth-accounts": "^1.0.0-beta.27",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.3.4",
-    "@types/node": "^8.5.2",
-    "typescript": "~2.2.1"
+    "@ionic/app-scripts": "3.1.6",
+    "@types/node": "^9.3.0",
+    "typescript": "~2.6.2"
   },
   "cordovaPlugins": [
     "cordova-plugin-console",
