--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/file-transfer": "^4.0.0",
     "@ionic-native/firebase-analytics": "^4.5.2",
     "@ionic-native/geolocation": "^4.5.2",
+    "@ionic-native/globalization": "^4.5.2",
     "@ionic-native/google-maps": "^4.5.2",
     "@ionic-native/push": "^4.5.2",
     "@ionic-native/screen-orientation": "^4.5.2",
@@ -45,6 +46,7 @@
     "cordova-plugin-file-transfer": "^1.7.0",
     "cordova-plugin-firebase": "^0.1.25",
     "cordova-plugin-firebase-analytics": "^0.12.1",
+    "cordova-plugin-globalization": "^1.0.9",
     "cordova-plugin-googlemaps": "^2.1.1",
     "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
     "cordova-plugin-screen-orientation": "^3.0.1",
@@ -57,6 +59,7 @@
     "ethereumjs-tx": "^1.3.3",
     "ethereumjs-wallet": "^0.6.0",
     "firebase": "^4.5.0",
+    "i18n-2": "^0.7.2",
     "install": "^0.10.2",
     "ionic-angular": "3.9.2",
     "ionic-image-loader": "^4.2.1",
@@ -109,7 +112,8 @@
       },
       "cordova-plugin-uniquedeviceid": {},
       "cordova-plugin-screen-orientation": {},
-      "cordova-plugin-firebase": {}
+      "cordova-plugin-firebase": {},
+      "cordova-plugin-globalization": {}
     },
     "platforms": [
       "android",
