--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "@angular/platform-browser-dynamic": "4.0.2",
     "@firebase/webchannel-wrapper": "0.2.5",
     "@ionic-native/barcode-scanner": "^4.5.2",
+    "@ionic-native/camera": "^4.5.2",
     "@ionic-native/core": "^4.5.2",
-    "@ionic-native/file": "^4.0.0",
-    "@ionic-native/file-transfer": "^4.0.0",
+    "@ionic-native/file": "^4.0.2",
+    "@ionic-native/file-transfer": "^4.0.2",
     "@ionic-native/firebase-analytics": "^4.5.2",
     "@ionic-native/geolocation": "^4.5.2",
     "@ionic-native/globalization": "^4.5.2",
     "@ionic-native/google-maps": "^4.5.2",
+    "@ionic-native/image-picker": "^4.5.2",
     "@ionic-native/push": "^4.5.2",
     "@ionic-native/screen-orientation": "^4.5.2",
     "@ionic-native/splash-screen": "4.5.2",
@@ -40,6 +42,7 @@
     "bip39": "^2.5.0",
     "cordova-android": "7.0.0",
     "cordova-ios": "~4.5.4",
+    "cordova-plugin-camera": "^4.0.1",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
@@ -52,6 +55,7 @@
     "cordova-plugin-screen-orientation": "^3.0.1",
     "cordova-plugin-splashscreen": "^5.0.1",
     "cordova-plugin-statusbar": "^2.4.1",
+    "cordova-plugin-telerik-imagepicker": "^2.1.8",
     "cordova-plugin-uniquedeviceid": "^1.3.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-support-google-services": "^1.0.0",
@@ -113,7 +117,11 @@
       "cordova-plugin-uniquedeviceid": {},
       "cordova-plugin-screen-orientation": {},
       "cordova-plugin-firebase": {},
-      "cordova-plugin-globalization": {}
+      "cordova-plugin-globalization": {},
+      "com.synconset.imagepicker": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "FidEver profile image"
+      },
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "android",
